Unite executor services to configure and retrieval from one point

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,9 @@ smpp:
     requestPoolSize: 2000
     enquireIntervals: 5
     attempts: 3
+
+executor:
+  pool:
+    size:
+      msg:
+        handler: 300
